--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,23 @@
-/* You can add global styles to this file, and also import other style files */
+body {
+  margin: 0;
+  padding: 0;
+  min-height: 100vh;
+
+
+  background: linear-gradient(
+    135deg,
+    #0f172a 0%,
+    #141b2e 30%,
+    #1a2238 50%,
+    #17213a 70%,
+    #0f182c 100%
+  );
+
+  background-attachment: fixed;
+  background-size: cover;
+
+  color: #e2e8f0;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
